// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Page - ConsentNotificationModal Behavior should render component structure correctly when consent cookie exists 1`] = `
<div>
  <div
    data-testid="SearchPage"
  />
</div>
`;

exports[`Search Page - ConsentNotificationModal Behavior should render differently when consent cookie is not set 1`] = `
<div>
  <div
    data-testid="SearchPage"
  />
</div>
`;

exports[`Search page should execute getServerSideProps with gb locale 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "testFeature": true,
    },
    "isError": false,
    "isLoading": false,
    "promotionBannerData": undefined,
    "pushRequestClosedCountCookie": 0,
    "pushRequestClosedTimestampCookie": null,
  },
}
`;

exports[`Search page should match the snapshot 1`] = `
<div>
  <div
    data-testid="DefaultLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="SearchPage"
      />
    </div>
  </div>
</div>
`;

exports[`Search page should match the snapshot with user details  business undefined 1`] = `
<div>
  <div
    data-testid="DefaultLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="SearchPage"
      />
    </div>
  </div>
</div>
`;

exports[`Search page should match the snapshot with user details undefined 1`] = `
<div>
  <div
    data-testid="DefaultLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="SearchPage"
      />
    </div>
  </div>
</div>
`;
